# manas-cli

./: .gitignore  Cargo.toml  README.md
docs/: admin-cred.md  boot-contract.md  freshness-envelopes.md  gemini-flash-suggestions.md  handoff.md  manas-binding-sketch.md  manas-instructions-original.md  manas-opus47-review.md  single-endpoint.md
docs/.handoffs/: last-handoff-md.md
docs/archive/: manas-architecture-2026-04-26.md  roadmap-2026-04-26.md
docs/reviews/: codex-initial-review.md
docs/spikes/: headless-harness-matrix.md  oq-1-mcpjungle-binding.md
skills/: done.md
src/: binding.rs  config.rs  main.rs
src/adapter/: claude_code.rs  codex.rs  gemini.rs  manas-instructions.md  mod.rs  opencode.rs
src/cmd/: done.rs  health.rs  install_services.rs  mod.rs  reflect.rs  serve.rs  status.rs  warm.rs
src/hub/: mcp.rs  mod.rs  wake_up.rs
src/skill/: lock.rs  mod.rs
tests/: adapter_smoke.rs  done_smoke.rs
