[package]
name = "manas-cli"
version = "0.1.1"
edition = "2024"

[[bin]]
name = "manas"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["json"] }
clap = { version = "4", features = ["derive"] }
libc = "0.2"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "signal"] }
uuid = { version = "1", features = ["v7"] }
